# haskell-flakes-double-patch

./: CHANGELOG.md  LICENSE  README.md  flake.nix  haskell-flakes-double-patch.cabal
nix/patches/: logict.patch
src/: MyLib.hs
