cabal-version:   3.0
name:            haskell-flakes-double-patch
version:         0.1.0.0

-- synopsis:
-- description:
license:         MIT
license-file:    LICENSE
author:          John Hampton
maintainer:      john.hampton@stanfordalumni.org

-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:  MyLib

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base    ^>=4.18.2.0
    , logict

  hs-source-dirs:   src
  default-language: Haskell2010
